--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -21,9 +21,9 @@
 			"group": "build",
 			"problemMatcher": "$msCompile"
 		},
-		// game
+		// game-1: gdextension
 		{
-			"label": "game [debug]",
+			"label": "game-1 [debug]",
 			"options": {
 				"cwd": "${workspaceFolder}/ppgame/game_gdextension"
 			},
@@ -37,25 +37,55 @@
 				"debug_symbols=yes",
 				"compiledb=yes"
 			],
-			"group": {
-				"kind": "build",
-				"isDefault": true
-			},
+			"group": "build",
+			"hide": true,
 			"problemMatcher": "$msCompile"
 		},
-		// merge compile_commands.json
+		// game-2: merge compile_commands.json
 		{
-			"label": "merge compile_commands.json",
+			"label": "game-2 merge compile_commands.json",
 			"options": {
 				"cwd": "${workspaceFolder}"
 			},
 			"type": "shell",
-			"command": "start merge_compile_commands.bat",
+			"command": "./jq.exe",
+			"args": [
+				"-s",
+				"\"add\"",
+				"godot/compile_commands.json",
+				"ppgame/game_gdextension/compile_commands.json",
+				">",
+				"compile_commands.json"
+			],
+			"hide": true,
+			"problemMatcher": []
+		},
+		// game-3: command clangd.restart
+		{
+			"label": "game-3 @command:clangd.restart",
+			"command": "${command:clangd.restart}",
+			"hide": true,
+			"problemMatcher": []
+		},
+		// game
+		{
+			"label": "game [debug]",
+			"dependsOrder": "sequence",
+			"dependsOn": [
+				"game-1 [debug]",
+				"game-2 merge compile_commands.json",
+				"game-3 @command:clangd.restart"
+			],
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			},
 			"problemMatcher": []
 		},
 		// editor & game
 		{
 			"label": "editor&game [debug]",
+			"dependsOrder": "sequence",
 			"dependsOn": [
 				"editor [debug]",
 				"game [debug]"
