使用typedef XXX super

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,23 @@
 {
 	"version": "0.2.0",
 	"configurations": [
+		// editor
+		{
+			"name": "editor [debug]",
+			"type": "cppvsdbg",
+			"request": "launch",
+			"program": "${workspaceFolder}/godot/bin/godot.windows.editor.dev.x86_64.exe",
+			"args": [
+				"--path",
+				"${workspaceFolder}/ppgame/project",
+				"--editor"
+			],
+			"stopAtEntry": false,
+			"cwd": "${workspaceFolder}",
+			"environment": [],
+			"console": "internalConsole",
+			"visualizerFile": "${workspaceFolder}/godot/platform/windows/godot.natvis"
+		},
 		// game
 		{
 			"name": "game [debug]",
