--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,9 +1,54 @@
 {
 	"version": "0.2.0",
 	"configurations": [
+		// ====================================================================
+		// Linux
+		// ====================================================================
 		// editor
 		{
-			"name": "editor [debug]",
+			"name": "editor [debug] - lldb",
+			"type": "lldb",
+			"request": "launch",
+			"program": "${workspaceFolder}/godot/bin/godot.linuxbsd.editor.dev.x86_64.llvm",
+			"args": [
+				"--path",
+				"${workspaceFolder}/ppgame/project",
+				"--editor"
+			],
+			"stopOnEntry": false,
+			"cwd": "${workspaceFolder}",
+			"console": "internalConsole",
+		},
+
+		// game
+		{
+			"name": "game [debug] - lldb",
+			"type": "lldb",
+			"request": "launch",
+			"program": "${workspaceFolder}/godot/bin/godot.linuxbsd.editor.dev.x86_64.llvm",
+			"args": [
+				"--path",
+				"${workspaceFolder}/ppgame/project",
+			],
+			"stopOnEntry": false,
+			"cwd": "${workspaceFolder}",
+			"console": "internalConsole",
+		},
+
+		// attach
+		{
+			"name": "attach - lldb",
+			"type": "lldb",
+			"request": "attach",
+			"pid": "${command:pickMyProcess}"
+		},
+
+		// ====================================================================
+		// Windows
+		// ====================================================================
+		// editor
+		{
+			"name": "editor [debug] - cppvsdbg",
 			"type": "cppvsdbg",
 			"request": "launch",
 			"program": "${workspaceFolder}/godot/bin/godot.windows.editor.dev.x86_64.exe",
@@ -20,7 +65,7 @@
 		},
 		// game
 		{
-			"name": "game [debug]",
+			"name": "game [debug] - cppvsdbg",
 			"type": "cppvsdbg",
 			"request": "launch",
 			"program": "${workspaceFolder}/godot/bin/godot.windows.editor.dev.x86_64.exe",
@@ -36,7 +81,7 @@
 		},
 		// attach
 		{
-			"name": "attach",
+			"name": "attach - cppvsdbg",
 			"type": "cppvsdbg",
 			"request": "attach",
 			"processId": "${command:pickProcess}",
