--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -20,11 +20,10 @@
 		// editor
 		{
 			"label": "editor [debug]",
+			"type": "shell",
 			"options": {
 				"cwd": "${workspaceFolder}/godot"
 			},
-			"type": "shell",
-			"group": "build",
 
 			"windows": {
 				"command": "scons",
@@ -66,10 +65,10 @@
 		// generate gdextension api
 		{
 			"label": "generate gdextension api",
+			"type": "shell",
 			"options": {
 				"cwd": "${workspaceFolder}/godot/bin"
 			},
-			"type": "shell",
 			
 			"windows": {
 				"command": "./godot.windows.editor.dev.x86_64.console.exe"
@@ -146,11 +145,11 @@
 
 		// game-1: gdextension
 		{
-			"label": "game-1 [debug]",
+			"label": "game-1 game [debug]",
+			"type": "shell",
 			"options": {
 				"cwd": "${workspaceFolder}/ppgame/game_gdextension"
 			},
-			"type": "shell",
 
 			"windows": {
 				"command": "scons",
@@ -177,17 +176,16 @@
 				]
 			},
 
-			"group": "build",
 			"hide": true,
 			"problemMatcher": "$msCompile"
 		},
 		// game-2: merge compile_commands.json
 		{
 			"label": "game-2 merge compile_commands.json",
+			"type": "shell",
 			"options": {
 				"cwd": "${workspaceFolder}"
 			},
-			"type": "shell",
 			
 			"windows": {
 				"command": "./jq.exe",
@@ -231,7 +229,7 @@
 			"label": "game [debug]",
 			"dependsOrder": "sequence",
 			"dependsOn": [
-				"game-1 [debug]",
+				"game-1 game [debug]",
 				"game-2 merge compile_commands.json",
 				"game-3 @command:clangd.restart"
 			],
@@ -239,6 +237,21 @@
 				"kind": "build",
 				"isDefault": true
 			},
+			"problemMatcher": []
+		},
+
+		// -----------------------------------------------------------------
+		// Doxygen
+		// -----------------------------------------------------------------
+
+		// doxygen
+		{
+			"label": "doxygen",
+			"type": "shell",
+			"options": {
+				"cwd": "${workspaceFolder}/doc/doxygen"
+			},
+			"command": "doxygen",
 			"problemMatcher": []
 		}
 	]
