--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "godot"]
 	path = godot
-	url = git@github.com:pupil1337/godot.git
+	url = git@github.com:godotengine/godot.git
 [submodule "godot-cpp"]
 	path = godot-cpp
-	url = git@github.com:pupil1337/godot-cpp.git
+	url = git@github.com:godotengine/godot-cpp.git
