--- a/ppgame/game_gdextension/SConstruct
+++ b/ppgame/game_gdextension/SConstruct
@@ -1,5 +1,16 @@
 #!/usr/bin/env python
 import os
+from SCons.Defaults import DefaultEnvironment
+from SCons.Script import ARGUMENTS
+from SCons.Script.SConscript import SConsEnvironment
+from SCons.Variables import Variables
+from SCons.Variables import BoolVariable, EnumVariable
+
+Default = SConsEnvironment().Default
+Export = SConsEnvironment().Export
+Help = SConsEnvironment().Help
+Import = SConsEnvironment().Import
+SConscript = SConsEnvironment().SConscript
 
 
 libname = "game_gdextension"
@@ -7,7 +18,7 @@ projectdir = "../project"
 
 # =================================================================================
 # localEnv
-localEnv = Environment(tools=["default"], PLATFORM="")
+localEnv = SConsEnvironment(tools=["default"], PLATFORM="")
 customs = ["custom.py"]
 customs = [os.path.abspath(path) for path in customs]
 opts = Variables(customs, ARGUMENTS)
