修改SConstruct ppgame应该使用godot-cpp的env副本 避免godot-cpp受ppgame环境配置影响

--- a/ppgame/game_gdextension/SConstruct
+++ b/ppgame/game_gdextension/SConstruct
@@ -34,9 +34,8 @@ opts.Update(localEnv)
 Help(opts.GenerateHelpText(localEnv))
 
 # =================================================================================
-# 拷贝godot-cpp构建, 并与其共享env
-env = localEnv.Clone()
-env = SConscript("../../godot-cpp/SConstruct", {"env": env, "customs": customs})
+# 编译godot-cpp, 并且拷贝其env
+env = SConscript("../../godot-cpp/SConstruct").Clone()
 
 # =================================================================================
 # 自定义methods
